# cpp-workshop-fall-2017-original

./: CMakeLists.txt  LICENSE.txt  README.md
src/: AustinFormat.cpp  AustinFormat.hpp  IAustinFormat.hpp  IAustinFormatParser.hpp  main.cpp
tst/: CMakeLists.txt  MockAustinFormat.hpp  MockAustinFormatParser.hpp  unit-IAustinFormat.cpp
